--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,7 +1,8 @@
 on:
-  push:
-    # Sequence of patterns matched against refs/tags
-    tags:
+  create:
+    ref_type:
+      - 'tag'
+    ref:
       - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 name: Create Release
